test/sema/typeck/function/params-superfluous.dora
fn foo() {}
fn f() { foo(1i32); }
